# AI_Outreach_Agent

./: .gitignore  README.MD  SETUP.md  discord_bot.py  main.py  pyproject.toml  rate_limits.json  refresh_meta_token.py  reset_quota.py  scrapper.py  test_email.py  verify_setup.py
commands/: campaign.py  email_sender.py  followup.py
logs/: ai_keys_state.json  email_rate_limits.json
utils/: Ai.py  Email.py  Instagram.py  SheetDB.py  Worker.py  email_handler.py  email_rate_limiter.py  imap_client.py  rate_limiter.py  shared_state.py
